[package]
name = "webdev"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
	"console",
	"Document",
	"Element",
	"HtmlCanvasElement",
	"HtmlElement",
	"HtmlCollection",
	"XmlDocument",
	"Node",
	"Window",
	"CanvasRenderingContext2d",
]
